# Runify

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt  schema.sql  schema_boy.sql  update_api.sh
alembic/: env.py
alembic/versions/: 001_initial.py
app/: main.py
app/core/: config.py  errors.py  pagination.py  security.py
app/models/: activity.py  athlete.py  auth.py  segment.py  social.py
app/schemas/: activity.py  athlete.py  auth.py  club.py  common.py  enums.py  gear.py  integration.py  notification.py  route.py  segment.py  social.py
app/services/: activity_service.py  athlete_service.py  auth_service.py  club_service.py  email_service.py  feed_service.py  gear_service.py  integration_service.py  notification_service.py  route_service.py  segment_service.py  social_service.py  storage_service.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
runify/: api.py  app.py  constants.py  localization.py  user.py  utilities.py
runify/algorithms/: algorithm.py  algorithms.py  neural_net_trainer1.py
runify/api/: activities.py  athletes.py  auth.py  check_implementation.py  clubs.py  gear.py  main.py  models.py  moderation.py  routes.py  streams.py
runify/templates/: activities.html  base.html  dashboard.html  index.html  index1.html  login.html  logout.html  settings.html  signup.html  (+1 more)
scripts/: seed.py  seed_bulk.py
tests/: conftest.py  helpers.py  test_api.py  test_integration.py  test_metrics.py
(+189 files in other folders)
