[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runify"
version = "0.1.0"
description = "Backend service for Runify, a web-based athletic analysis and social platform."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "user-agents>=2.2.0",
    "fitparse>=1.2.0",
    "gpxpy>=1.6.2",
    "polyline>=2.0.2",
    "email-validator>=2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.0"
]

[tool.ruff]
target-version = "py310"
line-length = 120

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "RUF"
]
ignore = [
    "E501", # Ignore line too long errors
    "B008"  # Ignore function call Depends/Query in default argument (FastAPI dependency injection)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
